feat: enhance error handling in remote cache refresh and update UI components for better user experience

--- a/src/app/components/details/operation-detail/operation-detail.component.html
+++ b/src/app/components/details/operation-detail/operation-detail.component.html
@@ -36,7 +36,7 @@
               </div>
               <mat-icon svgIcon="right-arrow" class="arrow-icon"></mat-icon>
               <div class="path">
-                <ng-container *ngIf="isLocalPath(operationDestination); else remoteIcon">
+                <ng-container *ngIf="remoteSettings; else remoteIcon">
                   <button mat-icon-button [color]="operationColor" (click)="triggerOpenInFiles(operationDestination)"
                     matTooltip="Open in file explorer">
                     <mat-icon svgIcon="folder"></mat-icon>
@@ -188,9 +188,9 @@
               </th>
               <td mat-cell *matCellDef="let file">
                 <div class="progress-bar" [ngClass]="operationClass">
-                  <div [style.width.%]="file.percentage || 100"></div>
+                  <div [style.width.%]="file.percentage || 0"></div>
                 </div>
-                <span>{{ (file.percentage || 100) }}%</span>
+                <span>{{ (file.percentage || 0) }}%</span>
               </td>
             </ng-container>
 
