--- a/src/app/modals/remote-config-modal/remote-config-modal.component.html
+++ b/src/app/modals/remote-config-modal/remote-config-modal.component.html
@@ -24,6 +24,7 @@
 
         <app-remote-config-step [form]="remoteForm" [remoteFields]="dynamicRemoteFields" [remoteTypes]="remoteTypes"
           [isLoading]="isLoading.remoteConfig ?? false" [existingRemotes]="existingRemotes"
+          [restrictMode]="restrictMode"
           (remoteTypeChanged)="onRemoteTypeChange()">
         </app-remote-config-step>
       </section>
