--- a/src/app/components/tabs-buttons/tabs-buttons.component.html
+++ b/src/app/components/tabs-buttons/tabs-buttons.component.html
@@ -1,4 +1,7 @@
 <div class="tabs-buttons">
+    <button mat-icon-button matTooltip="General" (click)="setTab('general')" [class.selected]="currentTab === 'general'">
+        <mat-icon svgIcon="home"></mat-icon>
+    </button>
     <button mat-icon-button matTooltip="Mount" (click)="setTab('mount')" [class.selected]="currentTab === 'mount'">
         <mat-icon svgIcon="mount"></mat-icon>
     </button>
@@ -7,8 +10,5 @@
     </button>
     <button mat-icon-button matTooltip="Copy" (click)="setTab('copy')" [class.selected]="currentTab === 'copy'">
         <mat-icon svgIcon="copy"></mat-icon>
-    </button>
-    <button mat-icon-button matTooltip="Jobs" disabled="true" (click)="setTab('jobs')" [class.selected]="currentTab === 'jobs'">
-        <mat-icon svgIcon="jobs"></mat-icon>
     </button>
 </div>
