--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -36,6 +36,12 @@
         <button mat-menu-item (click)="openLogsModal(selectedRemote.remoteSpecs.name)">
           <span>View Logs</span>
         </button>
+
+        <button mat-menu-item (click)="cloneRemote(selectedRemote.remoteSpecs.name)">
+          <span>Clone Remote</span>
+        </button>
+        <mat-divider></mat-divider>
+
         <button mat-menu-item (click)="openExportModal(selectedRemote.remoteSpecs.name)">
           <span>Export Configuration</span>
         </button>
@@ -74,13 +80,14 @@
 
     <!-- Overview Components -->
     <ng-container *ngIf="remotes.length > 0 && !selectedRemote && !isLoading">
-      <app-app-overview [mode]="currentTab" [iconService]="iconService" [remotes]="remotes"
-        (remoteSelected)="selectRemote($event)"
+      <app-general-overview *ngIf="currentTab === 'general'"
+        (openQuickAddRemoteModal)="openQuickAddRemoteModal()"></app-general-overview>
+      <app-app-overview *ngIf="currentTab !== 'general'" [mode]="currentTab" [iconService]="iconService"
+        [remotes]="remotes" (remoteSelected)="selectRemote($event)"
         (primaryAction)="currentTab === 'mount' ? mountRemote($event) : (currentTab === 'sync' || currentTab === 'copy' ? startOperation(currentTab, $event) : null)"
         (secondaryAction)="currentTab === 'mount' ? unmountRemote($event) : (currentTab === 'copy' || currentTab === 'sync' ? stopOperation(currentTab, $event) : null)"
         (openInFiles)="openRemoteInFiles($event, currentTab)" [actionInProgress]="actionInProgress">
       </app-app-overview>
-      <app-jobs-overview *ngIf="currentTab === 'jobs'"></app-jobs-overview>
     </ng-container>
 
     <!-- Remote Detail View -->
@@ -102,7 +109,11 @@
         (openInFiles)="openRemoteInFilesWithPath($event.remoteName, $event.path)">
       </app-operation-detail>
 
-      <app-job-detail *ngIf="currentTab === 'jobs'" [selectedRemote]="selectedRemote"></app-job-detail>
+      <app-general-detail *ngIf="currentTab === 'general'" [restrictMode]="restrictMode"
+        [jobs]="getJobsForRemote(selectedRemote.remoteSpecs.name)"
+        (stopOperation)="stopOperation($event.type, $event.remoteName)"
+        (openRemoteConfigModal)="openRemoteConfigModal($event.editTarget, $event.existingConfig)"
+        [iconService]="iconService" [selectedRemote]="selectedRemote"></app-general-detail>
     </ng-container>
   </mat-sidenav-content>
 </mat-sidenav-container>
