feat: Improve folder selection validation, enhance process termination handling, and fix mat-icon overflow in Windows

--- a/src/app/modals/about-modal/about-modal.component.html
+++ b/src/app/modals/about-modal/about-modal.component.html
@@ -1,6 +1,6 @@
 <div class="about-modal">
     <div class="modal-header" data-tauri-drag-region [class.scrolled]="scrolled">
-        <button>
+        <button disabled mat-icon-button>
             <mat-icon></mat-icon>
         </button>
         <p>About</p>
